--- a/calculator/index.html
+++ b/calculator/index.html
@@ -34,7 +34,8 @@
     <button data-operation>-</button>
     <button data-number>.</button>
     <button data-number>0</button>
-    <button data-equals class="span-two">=</button>
+    <button data-equals>=</button>
+    <button data-operation>^</button>
   </div>
 </body>
 
