--- a/calculator/index.html
+++ b/calculator/index.html
@@ -36,6 +36,8 @@
     <button data-number>0</button>
     <button data-equals>=</button>
     <button data-operation>^</button>
+    <button data-negative>±</button>
+
   </div>
 </body>
 
