feat: add note fix: float precision

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -37,7 +37,7 @@
     <button data-equals>=</button>
     <button data-operation>^</button>
     <button data-negative>±</button>
-
+    <button class="span-three">note: если второй операнд отрицательное число, то кнопку "=" нажимать не надо, результат сразу отобразится</button>
   </div>
 </body>
 
